--- a/Android/ArtI/app/src/main/res/values/strings.xml
+++ b/Android/ArtI/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="menu_profile">프로필</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="survey_title">마음에 드는 이미지를 골라주세요</string>
 </resources>
