--- a/Android/ArtI/app/src/main/res/values/strings.xml
+++ b/Android/ArtI/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="menu_profile">프로필</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="theme_title">테마 : %s</string>
 </resources>
