--- a/Android/ArtI/app/src/main/res/values/strings.xml
+++ b/Android/ArtI/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="artist">화가</string>
     <string name="genre">장르</string>
     <string name="art_museum">미술관</string>
+    <string name="cancel">취소</string>
 </resources>
