--- a/Android/ArtI/app/src/main/res/values/strings.xml
+++ b/Android/ArtI/app/src/main/res/values/strings.xml
@@ -52,4 +52,5 @@
 10. 연락처\n
 본 약관에 대한 질문이나 이의가 있을 경우, [고객 지원 이메일 주소]로 문의해 주시기 바랍니다.\n
     </string>
+    <string name="tv_introduce">소개</string>
 </resources>
