feat: 이미지 받은 파일 UI에 붙이기

--- a/Android/ArtI/app/src/main/res/values/strings.xml
+++ b/Android/ArtI/app/src/main/res/values/strings.xml
@@ -53,4 +53,5 @@
 본 약관에 대한 질문이나 이의가 있을 경우, [고객 지원 이메일 주소]로 문의해 주시기 바랍니다.\n
     </string>
     <string name="tv_introduce">소개</string>
+    <string name="no_result_artist">일치하는 결과가 없습니다.</string>
 </resources>
