feat: safeargs를 통한 데이터 전달

--- a/Android/ArtI/app/src/main/res/values/strings.xml
+++ b/Android/ArtI/app/src/main/res/values/strings.xml
@@ -54,4 +54,5 @@
     </string>
     <string name="tv_introduce">소개</string>
     <string name="no_result_artist">일치하는 결과가 없습니다.</string>
+    <string name="artist_detail">화가 상세</string>
 </resources>
